fix plans page button align

--- a/assets/less/custom-positioning.less
+++ b/assets/less/custom-positioning.less
@@ -17,7 +17,8 @@ html, body {
 }
 
 .valign-middle {
-  vertical-align: middle;
+ display: flex;
+ align-items: center;
 }
 
 .position-bl {
